@@ -12,3 +12,4 @@ pm_to_blib
 /MYMETA.*
 /Changes.old
 /Mandel-*.tar.gz
+/cover_db
