@@ -7,3 +7,4 @@
 ^Makefile$
 ^Mandel
 ^MYMETA\.
+cover_db
