@@ -8,6 +8,7 @@ SYNOPSIS
       package MyModel::Cat;
       use Mandel::Document;
       field [qw( name type )];
+      belongs_to person => 'MyModel::Person';
 
       package MyModel::Person;
       use Mandel::Document;
