@@ -12,6 +12,7 @@ Mandel - Async model layer for MongoDB objects using Mango
   package MyModel::Cat;
   use Mandel::Document;
   field [qw( name type )];
+  belongs_to person => 'MyModel::Person';
 
   package MyModel::Person;
   use Mandel::Document;
